--- a/DOT.html
+++ b/DOT.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     
     <!--THIS IS THE TITLE-->
-    <title>Coding Quiz</title>
+    <title>DOT</title>
 
 </head>
 
